# Android-Meals

app/: build.gradle.kts
app/src/androidTest/java/edu/sfsu/meals/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.c
app/src/main/cpp/Thread/: ThreadImpl.c
app/src/main/cpp/include/: List.h  Stack.h  Thread.h
app/src/main/cpp/stack/: ListImpl.c  StackImpl.c
app/src/main/java/edu/sfsu/meals/: MainActivity.java
app/src/main/java/edu/sfsu/meals/activity/: DetailActivity.java
app/src/main/java/edu/sfsu/meals/adapter/: DataAdapter.java
app/src/main/java/edu/sfsu/meals/database/: SQLiteMealHelper.java
app/src/main/java/edu/sfsu/meals/model/: DataModel.java
app/src/main/java/edu/sfsu/meals/stack/: MealStack.java
app/src/main/java/edu/sfsu/meals/task/: DataTask.java  HttpClient.java
app/src/main/res/layout/: activity_detail.xml  activity_main.xml  card_layout.xml  progressbar_layout.xml
app/src/main/res/values/: strings.xml
app/src/test/java/edu/sfsu/meals/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
